--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                     Roshambo
                                 </h3>
                                 <p class="works__paragraph">
-                                    Simple Rock, Stone, Scissors game with few CSS tricks.
+                                    Simple Rock, Paper, Scissors game with few CSS tricks.
                                 </p>
                             </div>
                             <a href="https://pmarciniuk.github.io/Roshambo/" target="_blank" class="btn btn-primary">See the project</a>
