--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="move-top">
         <a href="#header" class="move-top__link">
             <svg class="move-top__icon">
-                <use xlink:href="img/sprite.svg#icon-arrow-with-circle-up"></use>
+                <use xlink:href="img/sprite.svg#icon-up"></use>
             </svg>
         </a>
     </div>
@@ -70,7 +70,7 @@
         <div class="header__text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary--main">Opportunities don't happen.</span>
-                <span class="heading-primary--sub">You <span class="heading-primary--sub-underline">create</span> them.</span>
+                <span class="heading-primary--sub">You <span class="heading-primary--sub-highlighted">create</span> them.</span>
             </h1>
         </div>
         <div class="header__cta-box">
@@ -169,7 +169,7 @@
                     </div>
                     <a href="#section-works" class="about__arrow">
                         <svg class="about__arrow-icon">
-                            <use xlink:href="img/sprite.svg#icon-circle-down"></use>
+                            <use xlink:href="img/sprite.svg#icon-down"></use>
                         </svg>
                     </a>
                 </div>
@@ -208,19 +208,19 @@
                                     Natours
                                 </h3>
                                 <p class="works__paragraph">
-                                    Project made on Advenced CSS/SASS course.
+                                    Project made on Advanced CSS/SASS course.
                                 </p>
                             </div>
                             <a href="https://pmarciniuk.github.io/Natours/" target="_blank" class="btn btn-primary">See the project</a>
                             <div class="works__nav">
                                 <a href="#" class="works__nav-link previous">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-left"></use>
+                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
                                     </svg>
                                 </a>
                                 <a href="#" class="works__nav-link next">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-right"></use>
+                                        <use xlink:href="img/sprite.svg#icon-next"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -245,12 +245,12 @@
                             <div class="works__nav">
                                 <a href="#" class="works__nav-link previous">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-left"></use>
+                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
                                     </svg>
                                 </a>
                                 <a href="#" class="works__nav-link next">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-right"></use>
+                                        <use xlink:href="img/sprite.svg#icon-next"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -268,19 +268,19 @@
                                     Trillo
                                 </h3>
                                 <p class="works__paragraph">
-                                    Another project made on Advenced CSS/SASS course.
+                                    Another project made on Advanced CSS/SASS course.
                                 </p>
                             </div>
                             <a href="https://pmarciniuk.github.io/Trillo/" target="_blank" class="btn btn-primary">See the project</a>
                             <div class="works__nav">
                                 <a href="#" class="works__nav-link previous">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-left"></use>
+                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
                                     </svg>
                                 </a>
                                 <a href="#" class="works__nav-link next">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-right"></use>
+                                        <use xlink:href="img/sprite.svg#icon-next"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -298,19 +298,19 @@
                                     Atholl Centre
                                 </h3>
                                 <p class="works__paragraph">
-                                    My very first website project made for Atholl Centre Baptist Church Community based in Pitlochry, Scotland where I was volunteering.
+                                    My very first website project made for Atholl Centre Baptist Church Community located in Pitlochry, Scotland where I used to volunteer.
                                 </p>
                             </div>
                             <a href="https://pmarciniuk.github.io/HotelOnePage/" target="_blank" class="btn btn-primary">See the project</a>
                             <div class="works__nav">
                                 <a href="#" class="works__nav-link previous">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-left"></use>
+                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
                                     </svg>
                                 </a>
                                 <a href="#" class="works__nav-link next">
                                     <svg class="works__icon">
-                                        <use xlink:href="img/sprite.svg#icon-chevron-right"></use>
+                                        <use xlink:href="img/sprite.svg#icon-next"></use>
                                     </svg>
                                 </a>
                             </div>
