--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <span class="details__word">I'm</span>
                         <span class="details__name">Pawel Marciniuk</span>
                         <span class="details__job">Frontend Developer</span>
-                        <a href="https://drive.google.com/open?id=1Cc-DuArfKp-8Y6XvJhsJzM2QHQ1C40GP" target="_blank" class="btn btn-secondary u-margin-right-medium">Cv</a>
+                        <a href="https://drive.google.com/open?id=16s_iUFADLX3Vq2eh04ehUCbeD2wijaP-" target="_blank" class="btn btn-secondary u-margin-right-medium">Cv</a>
                         <a href="#section-contact" class="btn btn-secondary">Contact Me</a>
 
                     </div>
@@ -335,11 +335,11 @@
                         </svg>
                         <span>p.marciniuk91@gmail.com</span>
                     </a>
-                    <a href="tel:+48519586401" class="contact_phone">
+                    <a href="tel:+44 774 2807808" class="contact_phone">
                         <svg class="contact__icon">
                             <use xlink:href="img/sprite.svg#icon-phone"></use>
                         </svg>
-                        <span>+48 519 586 401</span>
+                        <span>+44 774 2807808</span>
                     </a>
                 </div>
             </div>
