--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- build:css -->
     <link rel="stylesheet" href="css/main.css">
     <!-- endbuild -->
-    
+
 </head>
 
 <body>
@@ -85,7 +85,6 @@
                 </ul>
             </nav>
         </div>
-
         <div class="header__slogan">
             <h1 class="header__text--heading">
                 Opportunities don't happen.
@@ -105,7 +104,6 @@
 
     <main>
         <section id="about" class="about">
-
             <h2 class="about__text--heading">
                 About Me
             </h2>
@@ -131,57 +129,57 @@
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-photoshop-cc"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Photoshop
-                        </figurecaption>
+                        </figcaption>
                     </figure>
                     <figure class="technologies__item">
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-Bootstrap"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Bootstrap
-                        </figurecaption>
+                        </figcaption>
                     </figure>
                     <figure class="technologies__item">
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-Javascript"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Javascript
-                        </figurecaption>
+                        </figcaption>
                     </figure>
                     <figure class="technologies__item">
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-Sass"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Sass
-                        </figurecaption>
+                        </figcaption>
                     </figure>
                     <figure class="technologies__item">
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-Css3"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Css3
-                        </figurecaption>
+                        </figcaption>
                     </figure>
                     <figure class="technologies__item">
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-Html5"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Html5
-                        </figurecaption>
+                        </figcaption>
                     </figure>
                     <figure class="technologies__item">
                         <svg class="technologies__item--icon">
                                 <use xlink:href="img/sprite.svg#icon-Git"></use>
                             </svg>
-                        <figurecaption class="technologies__item--text">
+                        <figcaption class="technologies__item--text">
                             Git
-                        </figurecaption>
+                        </figcaption>
                     </figure>
 
 
@@ -216,113 +214,117 @@
                 </h2>
                 <ul class="works__list">
                     <li class="works__item">
-                        <div class="works__item--picture"></div>
-                        <div class="works__item--description">
+                        <div class="works__item--picture">
+                            <div class="works__item--description">
 
-                            <div class="works__item--header">
-                                <h3 class="works__text--item-heading">
-                                    Natours
-                                </h3>
-                                <p class="works__text--paragraph">
-                                    Project made on Advanced CSS/SASS course.
-                                </p>
-                            </div>
-                            <a href="https://pmarciniuk.github.io/Natours/" target="_blank" class="works__item--button">See the project</a>
-                            <div class="works__nav">
-                                <a href="#" class="works__nav--link js-prev-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
-                                    </svg>
-                                </a>
-                                <a href="#" class="works__nav--link js-next-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-next"></use>
-                                    </svg>
-                                </a>
-                            </div>
-                        </div>
-                    </li>
-
-                    <li class="works__item">
-                        <div class="works__item--picture"></div>
-                        <div class="works__item--description">
-
-                            <div class="works__item--header">
-                                <h3 class="works__text--item-heading">
-                                    Roshambo
-                                </h3>
-                                <p class="works__text--paragraph">
-                                    Simple Rock, Paper, Scissors game with few CSS tricks.
-                                </p>
-                            </div>
-                            <a href="https://pmarciniuk.github.io/Roshambo/" target="_blank" class="works__item--button">See the project</a>
-                            <div class="works__nav">
-                                <a href="#" class="works__nav--link js-prev-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
-                                    </svg>
-                                </a>
-                                <a href="#" class="works__nav--link js-next-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-next"></use>
-                                    </svg>
-                                </a>
+                                <div class="works__description">
+                                    <h3 class="works__text--heading-item">
+                                        Natours
+                                    </h3>
+                                    <p class="works__text--paragraph">
+                                        Project made on Advanced CSS/SASS course.
+                                    </p>
+                                </div>
+                                <a href="https://pmarciniuk.github.io/Natours/" target="_blank" class="works__item--button">See the project</a>
+                                <div class="works__nav">
+                                    <a href="#" class="works__nav--link js-prev-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-previous"></use>
+                                        </svg>
+                                    </a>
+                                    <a href="#" class="works__nav--link js-next-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-next"></use>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </li>
 
                     <li class="works__item">
-                        <div class="works__item--picture"></div>
-                        <div class="works__item--description">
+                        <div class="works__item--picture">
+                            <div class="works__item--description">
 
-                            <div class="works__item--header">
-                                <h3 class="works__text--item-heading">
-                                    Trillo
-                                </h3>
-                                <p class="works__text--paragraph">
-                                    Another project made on Advanced CSS/SASS course.
-                                </p>
-                            </div>
-                            <a href="https://pmarciniuk.github.io/Trillo/" target="_blank" class="works__item--button">See the project</a>
-                            <div class="works__nav">
-                                <a href="#" class="works__nav--link js-prev-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
-                                    </svg>
-                                </a>
-                                <a href="#" class="works__nav--link js-next-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-next"></use>
-                                    </svg>
-                                </a>
+                                <div class="works__description">
+                                    <h3 class="works__text--heading-item">
+                                        Roshambo
+                                    </h3>
+                                    <p class="works__text--paragraph">
+                                        Simple Rock, Paper, Scissors game with few CSS tricks.
+                                    </p>
+                                </div>
+                                <a href="https://pmarciniuk.github.io/Roshambo/" target="_blank" class="works__item--button">See the project</a>
+                                <div class="works__nav">
+                                    <a href="#" class="works__nav--link js-prev-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-previous"></use>
+                                        </svg>
+                                    </a>
+                                    <a href="#" class="works__nav--link js-next-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-next"></use>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </li>
 
                     <li class="works__item">
-                        <div class="works__item--picture"></div>
-                        <div class="works__item--description">
+                        <div class="works__item--picture">
+                            <div class="works__item--description">
 
-                            <div class="works__item--header">
-                                <h3 class="works__text--item-heading">
-                                    Atholl Centre
-                                </h3>
-                                <p class="works__text--paragraph">
-                                    My very first website project made for Atholl Centre Baptist Church Community located in Pitlochry, Scotland where I used to volunteer.
-                                </p>
+                                <div class="works__description">
+                                    <h3 class="works__text--heading-item">
+                                        Trillo
+                                    </h3>
+                                    <p class="works__text--paragraph">
+                                        Another project made on Advanced CSS/SASS course.
+                                    </p>
+                                </div>
+                                <a href="https://pmarciniuk.github.io/Trillo/" target="_blank" class="works__item--button">See the project</a>
+                                <div class="works__nav">
+                                    <a href="#" class="works__nav--link js-prev-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-previous"></use>
+                                        </svg>
+                                    </a>
+                                    <a href="#" class="works__nav--link js-next-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-next"></use>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
-                            <a href="https://pmarciniuk.github.io/HotelOnePage/" target="_blank" class="works__item--button">See the project</a>
-                            <div class="works__nav">
-                                <a href="#" class="works__nav--link js-prev-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-previous"></use>
-                                    </svg>
-                                </a>
-                                <a href="#" class="works__nav--link js-next-button">
-                                    <svg class="works__nav--icon">
-                                        <use xlink:href="img/sprite.svg#icon-next"></use>
-                                    </svg>
-                                </a>
+                        </div>
+                    </li>
+
+                    <li class="works__item">
+                        <div class="works__item--picture">
+                            <div class="works__item--description">
+
+                                <div class="works__description">
+                                    <h3 class="works__text--heading-item">
+                                        Atholl Centre
+                                    </h3>
+                                    <p class="works__text--paragraph">
+                                        My very first website project made for Atholl Centre Baptist Church Community located in Pitlochry, Scotland where I used to volunteer.
+                                    </p>
+                                </div>
+                                <a href="https://pmarciniuk.github.io/HotelOnePage/" target="_blank" class="works__item--button">See the project</a>
+                                <div class="works__nav">
+                                    <a href="#" class="works__nav--link js-prev-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-previous"></use>
+                                        </svg>
+                                    </a>
+                                    <a href="#" class="works__nav--link js-next-button">
+                                        <svg class="works__nav--icon">
+                                            <use xlink:href="img/sprite.svg#icon-next"></use>
+                                        </svg>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </li>
@@ -349,7 +351,7 @@
                         <svg class="contact__icon">
                             <use xlink:href="img/sprite.svg#icon-phone"></use>
                         </svg>
-                        <spanc class="contact__text--span">+44 774 2807808</span>
+                        <span class="contact__text--span">+44 774 2807808</span>
                     </a>
             </div>
 
